# vscode-colab-python-starter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: new-case-study-checklist.md  plan.md
scripts/: bump_version.sh  new_case_study.sh  release_prepare.sh
templates/case-study/: .gitignore  .pre-commit-config.yaml  NOTEBOOK_ENV_CHECK.md  pyproject.toml  requirements.txt
