[project]
name = "case-study-foodhub"
version = "1.0.1"
description = "case-study-foodhub notebook project"
requires-python = ">=3.14,<3.15"
dependencies = [
  "numpy>=2.2.0",
  "pandas>=2.3.0",
  "scikit-learn>=1.6.0",
  "matplotlib>=3.10.0",
  "seaborn==0.13.2",
  "jupyter==1.1.1",
  "ipykernel==6.29.5"
]

[dependency-groups]
dev = [
  "ruff==0.15.8",
  "mypy==1.11.2",
  "pre-commit==3.8.0",
  "nbstripout==0.7.1"
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

